# scorep_plugin_openmp

./: AUTHORS  CMakeLists.txt  Makefile  OpenMPTP.c  README  README.md
